[gd_scene load_steps=5 format=3 uid="uid://coq554yjlmit7"]

[ext_resource type="Script" path="res://Scripts/Box_Area_Entered_Script.gd" id="1_5ei7l"]
[ext_resource type="AudioStream" uid="uid://dm2mnk8e4cevo" path="res://Sounds/slice.mp3" id="2_8874b"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_841uy"]
albedo_color = Color(0.509011, 0.696529, 0.261806, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_f4lwt"]
size = Vector3(0.5, 0.5, 0.5)

[node name="box" type="CSGBox3D"]
size = Vector3(0.5, 0.5, 0.5)
material = SubResource("StandardMaterial3D_841uy")

[node name="Area3D" type="Area3D" parent="." groups=["Box"]]
visibility_parent = NodePath("..")
script = ExtResource("1_5ei7l")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("BoxShape3D_f4lwt")

[node name="sfx_slice" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_8874b")
volume_db = -20.0

[connection signal="area_entered" from="Area3D" to="Area3D" method="_on_area_entered"]
[connection signal="area_exited" from="Area3D" to="Area3D" method="_on_area_exited"]
